feat: enhance logging functionality with file transport for development

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 # Server Configuration
 PORT=5000
 NODE_ENV=development
+# NOTE: In production/serverless (Vercel), NODE_ENV should be 'production' to disable file logging
 
 # Azure Cosmos DB Configuration
 COSMOS_ENDPOINT=https://your-cosmosdb-account.documents.azure.com:443/
