feat: add SQL configuration options and disable SQL database initialization if explicitly set

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
+  "env": {
+    "ENABLE_SQL": "false",
+    "NODE_ENV": "production"
+  },
   "builds": [
     {
       "src": "src/server.js",
