feat: Implement scheduler service for automated data ingestion and SQL population

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,11 @@ PORT=5000
 NODE_ENV=development
 # NOTE: In production/serverless (Vercel), NODE_ENV should be 'production' to disable file logging
 
+# Scheduler Configuration
+# Set to 'true' to enable automated data ingestion in development
+# In production, scheduler is always enabled
+ENABLE_SCHEDULER=false
+
 # Azure Cosmos DB Configuration
 COSMOS_ENDPOINT=https://your-cosmosdb-account.documents.azure.com:443/
 COSMOS_KEY=your-cosmos-db-primary-key
