--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,12 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "inspect-data": "node src/scripts/inspect-data.js"
+    "inspect-data": "node src/scripts/inspect-data.js",
+    "test-scheduler": "node src/scripts/test-scheduler.js",
+    "populate-sql": "node src/scripts/populate-sql-tables.js",
+    "populate-sql-simple": "node src/scripts/populate-sql-simple.js",
+    "check-sql-schema": "node src/scripts/check-sql-schema.js",
+    "diagnose-sql": "node src/scripts/diagnose-sql.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +37,7 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "mssql": "^12.2.0",
+    "node-cron": "^4.2.1",
     "winston": "^3.19.0"
   },
   "devDependencies": {
