--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,7 +8,9 @@
     {
       "src": "src/server.js",
       "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**/*.js"] }
+      "config": {
+        "includeFiles": ["src/**/*.js", "dist/**/*.js"]
+      }
     }
   ],
   "routes": [
