--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "env": {
-    "ENABLE_SQL": "false",
+    "ENABLE_SQL": "true",
     "NODE_ENV": "production"
   },
   "builds": [
